--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "presentlove",
+  "name": "wlove",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "swiper": "^11.2.6",
+    "web-vitals": "^2.1.4",
+    "wlove": "file:"
   },
   "scripts": {
     "start": "react-scripts start",
